--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.6
+  url_launcher: ^6.0.20
 
 
   # The following adds the Cupertino Icons font to your application.
